<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FasilitasFragment">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/fasilitas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/fasilitas" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColor="#000000"
        android:textSize="22sp"
        android:text="@string/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="386dp"
        android:layout_height="353dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="175dp"
        android:text="@string/textView9"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Lab"
            android:textColor="#000000" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/lab5"
                    android:contentDescription="@string/lab1" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/lab4"
                    android:contentDescription="@string/lab5" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/lab3"
                    android:contentDescription="@string/lab3" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/lab"
                    android:contentDescription="@string/lab2" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/lab2"
                    android:contentDescription="@string/lab4" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>