<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DosenFragment">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="151dp"
        android:layout_margin="70dp"
        android:layout_marginTop="68dp"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:text="@string/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/dosen2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dosen" />

    <ScrollView
        android:layout_width="334dp"
        android:layout_height="455dp"
        android:layout_marginTop="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView11"
            android:textColor="#000000" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
